--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ projects:
     archived: false
     forks: true
     projects:
-    # - repo-name
+      kataras/iris
+      kataras/neffos
 
 # social_media:
   # behance: your_username
