--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
   - jekyll-octicons
   - jekyll-github-metadata
   - jemoji
-
+repository: kataras/personal-website
 permalink: /:year/:month/:day/:title/
 
 defaults:
