--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,17 @@ defaults:
       layout: "post"
 
 projects:
-  sort_by: pushed
+  sort_by: stars
   # sort_by options:
   #   - pushed
   #   - stars
-  limit: 9
+  limit: 15
   exclude:
     archived: false
     forks: true
-    projects:
-      kataras/iris
-      kataras/neffos
+    # projects:
+    #   kataras/iris
+    #   kataras/neffos
 
 social_media:
   # behance: your_username
